[gd_scene load_steps=5 format=3 uid="uid://co4le7crf047l"]

[ext_resource type="Script" path="res://addons/hyh.digression/editor/controls/drag/DragTargetHSeparator.gd" id="1_aauwx"]
[ext_resource type="Texture2D" uid="uid://7sby15rdg417" path="res://addons/hyh.digression/icons/icon_tree_arrow_right_dark.svg" id="2_d56gc"]
[ext_resource type="Script" path="res://addons/hyh.digression/editor/controls/drag/DragTarget.gd" id="2_j3aji"]
[ext_resource type="Texture2D" uid="uid://brt3bw3yhakpp" path="res://addons/hyh.digression/icons/icon_tree_arrow_left_dark.svg" id="4_8cjdu"]

[node name="DragTargetHSeparator" type="MarginContainer"]
script = ExtResource("1_aauwx")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DropIconLeft" type="TextureRect" parent="HB"]
visible = false
layout_mode = 2
texture = ExtResource("2_d56gc")

[node name="HSeparator" type="HSeparator" parent="HB"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_j3aji")

[node name="DropIconRight" type="TextureRect" parent="HB"]
visible = false
layout_mode = 2
texture = ExtResource("4_8cjdu")

[connection signal="can_drop" from="HB/HSeparator" to="." method="_on_drag_target_can_drop"]
[connection signal="dropped" from="HB/HSeparator" to="." method="_on_drag_target_dropped"]
[connection signal="mouse_entered" from="HB/HSeparator" to="." method="_on_drag_target_mouse_entered"]
[connection signal="mouse_exited" from="HB/HSeparator" to="." method="_on_drag_target_mouse_exited"]
